<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.xmx.mygallery.ImageView.BigGifImageView
        android:id="@+id/big_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/big_photo_index"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="0/0" />

    <TextView
        android:id="@+id/big_photo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/big_photo_index"
        android:gravity="center"
        android:text="@string/default_string" />

    <LinearLayout
        style="?android:buttonBarStyle"
        android:id="@+id/big_photo_gif_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/big_photo_photo_button"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            style="?android:actionButtonStyle"
            android:id="@+id/big_photo_last"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last"
            android:textSize="12sp" />

        <Button
            style="?android:actionButtonStyle"
            android:id="@+id/big_photo_upend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/upend"
            android:textSize="12sp" />

        <Button
            style="?android:actionButtonStyle"
            android:id="@+id/big_photo_pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pause"
            android:textSize="12sp" />

        <Button
            style="?android:actionButtonStyle"
            android:id="@+id/big_photo_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/play"
            android:textSize="12sp" />

        <Button
            style="?android:actionButtonStyle"
            android:id="@+id/big_photo_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        style="?android:buttonBarStyle"
        android:id="@+id/big_photo_photo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:visibility="invisible" />

        <Button
            style="?android:actionButtonStyle"
            android:id="@+id/big_photo_limit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limited"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>
