<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/photo_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/big_photo_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

    <LinearLayout
        style="?android:buttonBarStyle"
        android:id="@+id/big_photo_flip_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />

        <Button
            style="?android:actionButtonStyle"
            android:id="@+id/big_photo_last_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_page"
            android:textSize="12sp" />

        <Button
            style="?android:actionButtonStyle"
            android:id="@+id/big_photo_auto_flip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/auto_flip"
            android:textSize="12sp" />

        <Button
            style="?android:actionButtonStyle"
            android:id="@+id/big_photo_next_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_page"
            android:textSize="12sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />


    </LinearLayout>

</RelativeLayout>